[project]
name = KAClasses
version = 0.0.1
author = Enrique Gómez Tagle
authoremail=enriquegomeztagle@kikinacademy.xyz
description = Best Implementation for each one of University OOP Classes
readme = "README.md"
requires-python = ">=3.7"
classifiers =
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

[options]
packages = find:
python_requires = >=3.7
include_package_data = True